Adding support for tracing